--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
