--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
