--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.3.3
-Flask-Cors==3.0.10
-PyPDF2==3.0.1
-scikit-learn==1.3.2
-docx2txt==0.8
+Flask
+Flask-Cors
+PyPDF2
+scikit-learn
+docx2txt
+PyCryptodome
