--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "restart": "node -e \"process.exit(0)\" && nodemon server.js",
+    "verify-db": "node verifyConnection.js"
   },
   "author": "",
   "license": "ISC",
